preselection NN added - first draft

--- a/Data_Preprocessing.ipynb
+++ b/Data_Preprocessing.ipynb
@@ -32,21 +32,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "id": "aa06407e-79df-46fb-9331-555ac157873a",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "N_FILES_MAX_PER_SAMPLE = 1\n",
+    "N_FILES_MAX_PER_SAMPLE = 10\n",
     "USE_DASK=False\n",
     "USE_SERVICEX=False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "id": "af7d38a2-db70-49f8-a0cc-bbe01d6164fe",
    "metadata": {
     "tags": []
@@ -61,7 +61,7 @@
       "example of information in fileset:\n",
       "{\n",
       "  'files': [https://xrootd-local.unl.edu:1094//store/user/AGC/nanoAOD/TT_TuneCUETP8M1_13TeV-powheg-pythia8/cmsopendata2015_ttbar_19980_PU25nsData2015v1_76X_mcRun2_asymptotic_v12_ext3-v1_00000_0000.root, ...],\n",
-      "  'metadata': {'process': 'ttbar', 'variation': 'scaleup', 'nevts': 1278695, 'xsec': 729.84}\n",
+      "  'metadata': {'process': 'ttbar', 'variation': 'scaleup', 'nevts': 12554872, 'xsec': 729.84}\n",
       "}\n"
      ]
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "id": "bf3a86a8-6170-4805-bcd9-09ae2a88098a",
    "metadata": {
     "tags": []
@@ -91,7 +91,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9cbddbdbfb04c96b7a4fbc596032ad7",
+       "model_id": "53a8a193a6fa4be695dbf8b16a1962eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "id": "5de727a0-e230-46dc-937b-9fdeba014b28",
    "metadata": {
     "tags": []
@@ -158,12 +158,14 @@
     "               \"single_top_s_chan\":2,\n",
     "              \"single_top_t_chan\":3,\n",
     "              \"single_top_tW\":4,\n",
-    "              \"wjets\":5}\n"
+    "              \"wjets\":5}\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "id": "93ac8e99-23b2-42dc-9c55-1eeb602cb41f",
    "metadata": {},
    "outputs": [],
@@ -268,10 +270,11 @@
     "        features[:, 12] = ak.Array(selected_jets[:,3].qgl).to_numpy()\n",
     "\n",
     "\n",
-    "        truth_labels = np.full_like(pT_lep, labels_dict[process])\n",
+    "        train_labels = np.full_like(pT_lep, labels_dict[process])\n",
     "\n",
     "\n",
-    "        output = {\"truth_labels\": col_accumulator(truth_labels.tolist()),\n",
+    "        output = {\"train_labels\": col_accumulator(train_labels.tolist()),\n",
+    "                  \"weights\": col_accumulator(selected_weights.tolist()),\n",
     "                  \"features\": col_accumulator(features.tolist()),\n",
     "                    \"H_T\": col_accumulator(H_T.tolist()),\n",
     "                    \"pT_lep\": col_accumulator(pT_lep.tolist()),}\n",
@@ -285,14 +288,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "id": "215e4af2-9251-4511-b979-286ff606d740",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef2abc2e404241d9b1b417f857a365e6",
+       "model_id": "6786da4758354c1baf27871204254b74",
        "version_major": 2,
        "version_minor": 0
       },
@@ -331,7 +334,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "execution took 191.19 seconds\n"
+      "execution took 1856.76 seconds\n"
      ]
     }
    ],
@@ -353,8 +356,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "53d14d38-1762-46b3-ac45-30a0b13c8b08",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# grab features and labels and convert to np array\n",
+    "features = np.array(output['features'].value)\n",
+    "train_labels = np.array(output['train_labels'].value)\n",
+    "weights = np.array(output['weights'].value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "4a1d8951-3519-42eb-8dee-1dff96dacef5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "from tensorflow.keras import layers\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e9b7711-76b5-4938-b9da-bf581ece4011",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluate_only=True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d955e9c6-6393-472a-8f68-a793e0b35933",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "51188/51188 [==============================] - 40s 774us/step - loss: 0.0337 - weighted_accuracy: 0.9688 - val_loss: 0.1964 - val_weighted_accuracy: 0.9691\n",
+      "Epoch 2/20\n",
+      "51188/51188 [==============================] - 39s 764us/step - loss: 0.0329 - weighted_accuracy: 0.9687 - val_loss: 0.1927 - val_weighted_accuracy: 0.9691\n",
+      "Epoch 3/20\n",
+      "51188/51188 [==============================] - 39s 759us/step - loss: 0.0327 - weighted_accuracy: 0.9687 - val_loss: 0.1931 - val_weighted_accuracy: 0.9691\n",
+      "Epoch 4/20\n",
+      "51188/51188 [==============================] - 39s 762us/step - loss: 0.0328 - weighted_accuracy: 0.9688 - val_loss: 0.2109 - val_weighted_accuracy: 0.9691\n",
+      "Epoch 5/20\n",
+      "51188/51188 [==============================] - 39s 763us/step - loss: 0.0328 - weighted_accuracy: 0.9688 - val_loss: 0.1954 - val_weighted_accuracy: 0.9691\n",
+      "Epoch 6/20\n",
+      "51188/51188 [==============================] - 39s 760us/step - loss: 0.0326 - weighted_accuracy: 0.9688 - val_loss: 0.2021 - val_weighted_accuracy: 0.9691\n",
+      "Epoch 7/20\n",
+      " 2939/51188 [>.............................] - ETA: 31s - loss: 0.0362 - weighted_accuracy: 0.9682"
+     ]
+    }
+   ],
+   "source": [
+    "# One-hot encode labels\n",
+    "encoder = OneHotEncoder(sparse_output=False, categories='auto')\n",
+    "train_labels_reshaped = train_labels.reshape(-1, 1)\n",
+    "train_labels_onehot = encoder.fit_transform(train_labels_reshaped)\n",
+    "\n",
+    "# Standardize the input features\n",
+    "scaler = StandardScaler()\n",
+    "features_scaled = scaler.fit_transform(features)  # Fit & transform training data\n",
+    "\n",
+    "# Split data into training and validation sets (including weights)\n",
+    "X_train, X_val, y_train, y_val, weight_train, weight_val = train_test_split(\n",
+    "    features_scaled, train_labels_onehot, weights, test_size=0.2, random_state=42\n",
+    ")\n",
+    "\n",
+    "# Define the neural network model\n",
+    "model = keras.Sequential([\n",
+    "    layers.Input(shape=(features.shape[1],)),  # Input layer\n",
+    "    layers.Dense(64, activation='relu'),\n",
+    "    layers.Dense(64, activation='relu'),\n",
+    "    layers.Dense(32, activation='relu'),\n",
+    "    layers.Dense(5, activation='softmax')  # Output layer for 5 classes\n",
+    "])\n",
+    "\n",
+    "# Compile the model\n",
+    "model.compile(optimizer='adam',\n",
+    "              loss='categorical_crossentropy',\n",
+    "              metrics=[tf.keras.metrics.CategoricalAccuracy(name=\"weighted_accuracy\")])\n",
+    "\n",
+    "# Train the model with sample weights\n",
+    "model.fit(X_train, y_train, sample_weight=weight_train, \n",
+    "          validation_data=(X_val, y_val), epochs=20, batch_size=32)\n",
+    "\n",
+    "# Evaluate the model using sample weights\n",
+    "loss, accuracy = model.evaluate(X_val, y_val, sample_weight=weight_val)\n",
+    "print(f\"Weighted Validation Accuracy: {accuracy:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44487cc4-4e0f-4f11-932d-497b329b303d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "print(y_val)\n",
+    "true_labels = np.argmax(y_val, axis=1) + 1  # Convert from one-hot to 1-based class labels\n",
+    "print(true_labels[true_labels==5].shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b978584f-bb7d-48bb-8c7c-a85f96a11368",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Get predictions (softmax outputs)\n",
+    "y_pred = model.predict(X_val)  # Shape: (num_samples, 5)\n",
+    "\n",
+    "# Convert one-hot encoded y_val back to integer labels (1-5)\n",
+    "true_labels = np.argmax(y_val, axis=1) + 1  # Converts from one-hot to 1-5 based labels\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45fbbbc0-46c8-4020-9781-e763f953ffd6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "for key in labels_dict:  # Loop over 5 classes\n",
+    "    plt.hist(y_pred[true_labels == labels_dict[key]], bins=50, \n",
+    "             alpha=0.6, label=key, \n",
+    "             density=True)\n",
+    "\n",
+    "plt.xlabel(\"Softmax Output\")\n",
+    "plt.ylabel(\"Density\")\n",
+    "plt.title(\"Distribution of Neural Network Softmax Outputs per Class\")\n",
+    "plt.legend()\n",
+    "plt.yscale('log')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1079f304-3898-4c7a-b73b-2a2e63e6f44c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "for key in labels_dict:  # Loop over 5 classes\n",
+    "    plt.hist(y_pred[true_labels == labels_dict[key]], bins=50, \n",
+    "             alpha=0.6, label=key, \n",
+    "             density=True)\n",
+    "\n",
+    "plt.xlabel(\"Softmax Output\")\n",
+    "plt.ylabel(\"Density\")\n",
+    "plt.title(\"Distribution of Neural Network Softmax Outputs per Class\")\n",
+    "plt.legend()\n",
+    "plt.yscale('log')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96188779-c8d9-4415-88ca-b654948c8f8f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1c60a35-092b-4ea9-a7e1-ab9bc5dc6aaf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d45c14ff-b62a-41af-af3e-17f7eb52a46f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2369320-ea2c-49ac-bf54-9bd0bd4e03d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f7cb969-076b-40b1-9e68-be116781acf6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc2b9643-02af-4ce7-a465-3d10a460ec19",
    "metadata": {},
    "outputs": [],
    "source": []
