Building the training class

--- a/Neural_Likelihood_Ratio_training.ipynb
+++ b/Neural_Likelihood_Ratio_training.ipynb
@@ -264,14 +264,38 @@
     "        scaled_data_holdout = pd.DataFrame(scaled_data_holdout, columns=self.columns)\n",
     "\n",
     "        # Check if the datasets are normalized\n",
-    "        w_train_SBI = w_train.copy()\n",
-    "        temp_data['w'] = w_train_SBI\n",
+    "        print(f\"Sum of weights of class 0: {np.sum(weight_train[label_train==0])}\")\n",
+    "        print(f\"Sum of weights of class 1: {np.sum(weight_train[label_train==1])}\")\n",
     "\n",
-    "        y_train_SBI = y_train.copy()\n",
-    "        temp_data['y'] = y_train_SBI\n",
+    "        print(f\"Using {activation} activation function\")\n",
     "\n",
-    "        print(np.ravel(temp_data[temp_data.y==0].w).sum())\n",
-    "        print(np.ravel(temp_data[temp_data.y==1].w).sum())\n",
+    "        self.model_NN = build_model(n_hidden=hidden_layers, n_neurons=neurons, \n",
+    "                                    learning_rate=learning_rate, \n",
+    "                                    input_shape=[len(self.columns)], \n",
+    "                                    use_log_loss=self.use_log_loss,\n",
+    "                                    activation=activation)\n",
+    "\n",
+    "        self.model_NN.summary()\n",
+    "\n",
+    "        if callback:\n",
+    "\n",
+    "            print(\"Using Callbacks\")\n",
+    "\n",
+    "            self.history_SBI = self.model_NN.fit(scaled_data_train, label_train, callbacks=[reduce_lr, es], \n",
+    "                                                epochs=number_of_epochs, batch_size=batch_size, \n",
+    "                                                validation_split=validation_split, sample_weight=weight_train, \n",
+    "                                                verbose=2)\n",
+    "\n",
+    "        else:\n",
+    "            print(\"Nor Using Callbacks - Systematic Uncertainties?\")\n",
+    "\n",
+    "            self.history_SBI = self.model_NN.fit(scaled_data_train, label_train, \n",
+    "                                                epochs=number_of_epochs, batch_size=batch_size, \n",
+    "                                                validation_split=validation_split, sample_weight=weight_train, \n",
+    "                                                verbose=2)\n",
+    "        \n",
+    "\n",
+    "        print(\"Finished Training\")\n",
     "\n",
     "\n",
     "\n",
