training functiona added

--- a/Neural_Likelihood_Ratio_training.ipynb
+++ b/Neural_Likelihood_Ratio_training.ipynb
@@ -15,10 +15,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "id": "9efffbbe-8ef6-4e8c-b25b-296129c5a492",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-02-08 20:16:36.219323: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-02-08 20:16:38.251292: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
@@ -34,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "id": "cdd6f5ac-575e-40df-9d90-991756324379",
    "metadata": {},
    "outputs": [],
@@ -44,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "id": "1051f14a-0104-418b-9e43-6edcdcd07df2",
    "metadata": {},
    "outputs": [],
@@ -57,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "id": "b9cf54f5-1b67-491b-8ccb-eb5835b9e85d",
    "metadata": {},
    "outputs": [],
@@ -68,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "id": "a2da0e8b-5d5e-46e7-9c9d-ee8e9d351df1",
    "metadata": {},
    "outputs": [
@@ -78,7 +88,7 @@
        "(436311,)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "id": "60a09162-926c-49a8-956d-0e952a2c8485",
    "metadata": {},
    "outputs": [],
@@ -108,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "id": "34db67da-a22d-4aa9-bbb4-a4dd7c73f45f",
    "metadata": {},
    "outputs": [],
@@ -136,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "id": "0d78d612-3f33-40f1-b40a-e7bd96929ad4",
    "metadata": {},
    "outputs": [
@@ -230,7 +240,7 @@
     "\n",
     "        data_train, data_holdout, \\\n",
     "        label_train, label_holdout, \\\n",
-    "        weight_train, weight_holdout = train_test_split(self.dataset, \n",
+    "        weight_train, weight_holdout = train_test_split(self.dataset[self.columns], \n",
     "                                                        self.train_labels, \n",
     "                                                        self.weights, \n",
     "                                                        test_size=holdout_num, \n",
@@ -281,7 +291,7 @@
     "\n",
     "            print(\"Using Callbacks\")\n",
     "\n",
-    "            self.history_SBI = self.model_NN.fit(scaled_data_train, label_train, callbacks=[reduce_lr, es], \n",
+    "            self.history = self.model_NN.fit(scaled_data_train, label_train, callbacks=[reduce_lr, es], \n",
     "                                                epochs=number_of_epochs, batch_size=batch_size, \n",
     "                                                validation_split=validation_split, sample_weight=weight_train, \n",
     "                                                verbose=2)\n",
@@ -289,13 +299,56 @@
     "        else:\n",
     "            print(\"Nor Using Callbacks - Systematic Uncertainties?\")\n",
     "\n",
-    "            self.history_SBI = self.model_NN.fit(scaled_data_train, label_train, \n",
+    "            self.history = self.model_NN.fit(scaled_data_train, label_train, \n",
     "                                                epochs=number_of_epochs, batch_size=batch_size, \n",
     "                                                validation_split=validation_split, sample_weight=weight_train, \n",
     "                                                verbose=2)\n",
     "        \n",
     "\n",
     "        print(\"Finished Training\")\n",
+    "\n",
+    "\n",
+    "        saved_scaler = self.path_to_models+\"model_scaler.bin\"\n",
+    "        print(saved_scaler)\n",
+    "\n",
+    "        model_json = self.model_NN.to_json()\n",
+    "        with open(self.path_to_models+\"model_arch.json\", \"w\") as json_file:\n",
+    "            json_file.write(model_json)\n",
+    "\n",
+    "        # serialize weights to HDF5\n",
+    "        self.model_NN.save_weights(self.path_to_models+\"model_weights.h5\")\n",
+    "\n",
+    "        dump(self.scaler, saved_scaler, compress=True)\n",
+    "\n",
+    "        plot_loss(self.history, path_to_figures=self.path_to_figures)\n",
+    "\n",
+    "        # Redo the split with all the columns in the original dataset\n",
+    "        self.train_data_eval, self.train_holdout_eval = train_test_split(self.dataset, \n",
+    "                                                                  test_size=holdout_num, \n",
+    "                                                                  random_state=self.random_state_holdout,\n",
+    "                                                                  stratify=self.train_class)\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        self.label_0_hpred = self.predict_with_model(self.train_holdout_eval[label_holdout==0], use_log_loss=self.use_log_loss)\n",
+    "        self.label_1_hpred = self.predict_with_model(self.train_holdout_eval[label_holdout==1], use_log_loss=self.use_log_loss)\n",
+    "\n",
+    "        self.label_0_tpred = self.predict_with_model(self.train_data_eval[label_holdout==0], use_log_loss=self.use_log_loss)\n",
+    "        self.label_1_tpred = self.predict_with_model(self.train_data_eval[label_holdout==1], use_log_loss=self.use_log_loss)\n",
+    "        \n",
+    "\n",
+    "        # Some diagnostics to ensure numerical stability\n",
+    "        print(\"Label 0 training data prediction (max) = \"+str(np.amax(self.label_0_tpred)))\n",
+    "        print(\"Label 0 training data prediction (min) = \"+str(np.amin(self.label_0_tpred)))\n",
+    "\n",
+    "        print(\"Label 1 training data prediction (max) = \"+str(np.amax(self.label_1_tpred)))\n",
+    "        print(\"Label 1 training data prediction (min) = \"+str(np.amin(self.label_1_tpred)))\n",
+    "\n",
+    "        print(\"Label 0 training data prediction (max) = \"+str(np.amax(self.label_0_hpred)))\n",
+    "        print(\"Label 0 training data prediction (min) = \"+str(np.amin(self.label_0_hpred)))\n",
+    "\n",
+    "        print(\"Label 1 training data prediction (max) = \"+str(np.amax(self.label_1_hpred)))\n",
+    "        print(\"Label 1 training data prediction (min) = \"+str(np.amin(self.label_1_hpred)))\n",
     "\n",
     "\n",
     "\n",
