--- a/cms_ttbar_open_data/Neural_Likelihood_Ratio_training.ipynb
+++ b/cms_ttbar_open_data/Neural_Likelihood_Ratio_training.ipynb
@@ -15,20 +15,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "9efffbbe-8ef6-4e8c-b25b-296129c5a492",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-02-08 20:16:36.219323: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-02-08 20:16:38.251292: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
@@ -44,21 +34,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "cdd6f5ac-575e-40df-9d90-991756324379",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "saved_data='./cached_data/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "1051f14a-0104-418b-9e43-6edcdcd07df2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './cached_data/features.npy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Load the datasets from pre-processed input\u001b[39;00m\n\u001b[1;32m      2\u001b[0m saved_data\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./cached_data/\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 4\u001b[0m training_features \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43msaved_data\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43mfeatures.npy\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m train_labels \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msaved_data\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mtrain_labels.npy\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m preselection_score \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msaved_data\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mpreselection_score.npy\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/numpy/lib/npyio.py:405\u001b[0m, in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[0m\n\u001b[1;32m    403\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m    404\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 405\u001b[0m     fid \u001b[38;5;241m=\u001b[39m stack\u001b[38;5;241m.\u001b[39menter_context(\u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mos_fspath\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[1;32m    406\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m    408\u001b[0m \u001b[38;5;66;03m# Code to distinguish from NumPy binary files and pickles.\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './cached_data/features.npy'"
+     ]
+    }
+   ],
    "source": [
+    "# Load the datasets from pre-processed input\n",
+    "saved_data='./cached_data/'\n",
+    "\n",
     "training_features = np.load(f\"{saved_data}features.npy\")\n",
     "train_labels = np.load(f\"{saved_data}train_labels.npy\")\n",
     "preselection_score = np.load(f\"{saved_data}preselection_score.npy\")\n",
@@ -67,39 +63,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b9cf54f5-1b67-491b-8ccb-eb5835b9e85d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Build a pandas dataframe from the arrays\n",
     "columns = ['lepton_pt', 'lepton_eta', 'lepton_phi']\n",
-    "dataset = pd.DataFrame(training_features, columns=columns)\n"
+    "dataset = pd.DataFrame(training_features, columns=columns)\n",
+    "dataset['presel_score'] = preselection_score\n",
+    "dataset['weights'] = weights"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a2da0e8b-5d5e-46e7-9c9d-ee8e9d351df1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(436311,)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "preselection_score[train_labels==1].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "60a09162-926c-49a8-956d-0e952a2c8485",
    "metadata": {},
    "outputs": [],
