--- a/cms_ttbar_open_data/Data_Preprocessing.ipynb
+++ b/cms_ttbar_open_data/Data_Preprocessing.ipynb
@@ -7,22 +7,12 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'utils'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 17\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmplhep\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mhep\u001b[39;00m\n\u001b[1;32m     15\u001b[0m hep\u001b[38;5;241m.\u001b[39mstyle\u001b[38;5;241m.\u001b[39muse(hep\u001b[38;5;241m.\u001b[39mstyle\u001b[38;5;241m.\u001b[39mATLAS)\n\u001b[0;32m---> 17\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m \n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'utils'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import logging\n",
     "import time\n",
+    "\n",
+    "import utils \n",
     "\n",
     "import awkward as ak\n",
     "from coffea import processor\n",
@@ -35,14 +25,12 @@
     "import pyhf\n",
     "\n",
     "import mplhep as hep\n",
-    "hep.style.use(hep.style.ATLAS)\n",
-    "\n",
-    "import utils "
+    "hep.style.use(hep.style.ATLAS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "aa06407e-79df-46fb-9331-555ac157873a",
    "metadata": {
     "tags": []
@@ -57,12 +45,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "af7d38a2-db70-49f8-a0cc-bbe01d6164fe",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processes in fileset: ['ttbar__nominal', 'ttbar__scaledown', 'ttbar__scaleup', 'ttbar__ME_var', 'ttbar__PS_var', 'single_top_s_chan__nominal', 'single_top_t_chan__nominal', 'single_top_tW__nominal', 'wjets__nominal']\n",
+      "\n",
+      "example of information in fileset:\n",
+      "{\n",
+      "  'files': [https://xrootd-local.unl.edu:1094//store/user/AGC/nanoAOD/TT_TuneCUETP8M1_13TeV-powheg-pythia8/cmsopendata2015_ttbar_19980_PU25nsData2015v1_76X_mcRun2_asymptotic_v12_ext3-v1_00000_0000.root, ...],\n",
+      "  'metadata': {'process': 'ttbar', 'variation': 'scaleup', 'nevts': 1278695, 'xsec': 729.84}\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "fileset = utils.file_input.construct_fileset(\n",
     "    N_FILES_MAX_PER_SAMPLE,\n",
@@ -79,12 +81,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "bf3a86a8-6170-4805-bcd9-09ae2a88098a",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "82172175b671407b9fa209bf32b587c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "NanoAODSchema.warn_missing_crossrefs = False # silences warnings about branches we will not use here\n",
     "\n",
@@ -106,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5de727a0-e230-46dc-937b-9fdeba014b28",
    "metadata": {
     "tags": []
@@ -127,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "93ac8e99-23b2-42dc-9c55-1eeb602cb41f",
    "metadata": {},
    "outputs": [],
@@ -223,10 +250,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "215e4af2-9251-4511-b979-286ff606d740",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1cb728bf7b8543458079bdd5fcd99314",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "execution took 195.36 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "if not USE_SAVED_FEATURES:\n",
     "    \n",
