Fixed missing H_T in training. plot script changes

--- a/cms_ttbar_open_data/Parameter_Fitting.ipynb
+++ b/cms_ttbar_open_data/Parameter_Fitting.ipynb
@@ -191,12 +191,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b9168319-78a4-480b-a650-e4cf56da58d9",
+   "cell_type": "markdown",
+   "id": "065e763a-3cb7-4f93-830c-7b423c9db44a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "So the best-fit value from the toy analysis with Asimov dataset does not converge to the truth value - $\\widehat{\\mu}_{t\\bar{t}} \\neq \\mu^\\text{truth}_{t\\bar{t}} = 1.0$.\n",
+    "\n",
+    "Unlike a binned Poisson likelihood fit, which by definition converges to the truth value for Asimov and has well-defined asymptotic statistical properties - this is not guaranteed in an NSBI analysis."
+   ]
   },
   {
    "cell_type": "code",
