--- a/cms_ttbar_open_data/Neural_Likelihood_Ratio_training.ipynb
+++ b/cms_ttbar_open_data/Neural_Likelihood_Ratio_training.ipynb
@@ -26,12 +26,18 @@
     "\n",
     "$$\\frac{p(x|\\mu, \\alpha)}{p_{ref}(x)} = \\frac{1}{\\nu(\\mu, \\alpha)} \\sum_c f_c(\\mu) \\cdot \\nu_c(\\alpha) \\cdot \\frac{p_c\\left(x|\\alpha\\right)}{p_{ref}(x)}$$\n",
     "\n",
-    "Furthermore, instead of training NNs parameterized on $\\mu$ and $\\alpha$, we use analytical parameterizations to simplify the problem"
+    "Factorizing out the $\\alpha$-dependence in the density ratios:\n",
+    "\n",
+    "$$\\frac{p(x|\\mu, \\alpha)}{p_{ref}(x)} = \\frac{1}{\\sum_c G_c(\\alpha) \\cdot f_c(\\mu) \\cdot \\nu_c} \\sum_c f_c(\\mu) \\cdot \\nu_c(\\alpha) \\cdot g_c(x|\\alpha) \\cdot \\frac{p_c\\left(x\\right)}{p_{ref}(x)}$$\n",
+    "\n",
+    "Furthermore, instead of training NNs parameterized on $\\mu$ and $\\alpha$, we use analytical parameterizations to simplify the problem to training only parameter-independent density ratios.\n",
+    "\n",
+    "Let's set this up for the ttbar dataset!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 77,
    "id": "0a769dae-97a2-44f9-bc81-e4c74ff7bedb",
    "metadata": {},
    "outputs": [],
@@ -114,6 +120,16 @@
    "id": "2d7f8e5e-0f6c-427a-8302-cf6592d7f044",
    "metadata": {},
    "source": [
+    "The density ratios need to be trained on phase space regions with support for the reference hypothesis $p_{ref}(x) > 0$.\n",
+    "\n",
+    "To ensure this, we make a selection that selects events in the phase space regions with $p_{ref}(x) > 0$, and only perform the NSBI fit in this selected analysis region. A natural choice for the reference hypothesis is then a mix of signal hypotheses $p_{ref}(x) = \\frac{1}{\\sum_S \\nu_S} \\sum_S \\frac{d\\sigma_S}{dx}$.\n",
+    "\n",
+    "A multi-class classification NN, with softmax output, is trained to output a score:\n",
+    "\n",
+    "$$ \\text{NN}_\\text{presel} = \\frac{\\sum_S P_S (x)}{\\sum_B P_B(x)} $$\n",
+    "\n",
+    "where $P_X$ are the probability scores outputted from the softmax layer of the trained NN.\n",
+    "\n",
     "Make a selection cut for performing the NSBI analysis, balancing the number of signal events that go into the signal region (increasing sensitivity) and the feasibility of training accurate and precise NNs over a large phase space (need bigger models and more statistics).\n",
     "\n",
     "As a first cut, we choose a loose preselection and see if it works."
