--- a/cms_ttbar_open_data/Data_Preprocessing.ipynb
+++ b/cms_ttbar_open_data/Data_Preprocessing.ipynb
@@ -203,9 +203,11 @@
     "\n",
     "![Unknown.png](attachment:2a11e50b-b39b-4d3e-91b2-2cc2be1d6b65.png)![Unknown-2.png](attachment:936200a8-cc0d-4442-ad6a-789e7dc3e458.png)\n",
     "\n",
-    "No b-tagging requirements are made, nor are a minimum number of jets in the final state enforced. **This is only a toy version of the original analysis to illustrate the NSBI workflow.** \n",
+    "No b-tagging requirements are made, nor are a minimum number of four jets in the final state enforced. **This is only a toy version of the original analysis to illustrate the NSBI workflow.** \n",
     "\n",
-    "Since adding jet-related features like b-tagging can also isolate phase spaces with low background statistics, only the single lepton kinematics are used as multi-dimensional training features for the modelling of likelihood ratio. "
+    "Since adding jet-related features like b-tagging can also isolate phase spaces with low background statistics, only the single lepton kinematics $(p_T, \\eta, \\phi)$ and sum of jet pT $H_T = \\sum_\\text{jets} p_T$ are used as multi-dimensional training features for the modelling of likelihood ratios. \n",
+    "\n",
+    "In an ideal scenario with enough Monte Carlo statistics to train low-variance NNs, the full final-state information is used in an NSBI analysis to maximize sensivity - reemphasizing the toy nature of the analysis presented in this tutorial."
    ]
   },
   {
