--- a/cms_ttbar_open_data/Data_Preprocessing.ipynb
+++ b/cms_ttbar_open_data/Data_Preprocessing.ipynb
@@ -170,7 +170,7 @@
    "outputs": [],
    "source": [
     "# Keep only a subset of the background for illustration\n",
-    "labels_dict = {\"ttbar\": 0,\n",
+    "labels_dict = {\"ttbar\": 0,              # signal process\n",
     "              \"single_top_t_chan\":1,\n",
     "              \"wjets\":2}\n",
     "\n",
