--- a/cms_ttbar_open_data/Parameter_Fitting.ipynb
+++ b/cms_ttbar_open_data/Parameter_Fitting.ipynb
@@ -879,7 +879,7 @@
    "id": "8585d703-2d85-4012-9292-2b2d381d8ae4",
    "metadata": {},
    "source": [
-    "The number of function calls reduces significantly. While the time and function call seem negligible in this fit with only 3 parameters, JIT compilation becomes **essential** in a fit with $O(100)$ parameters typical in an LHC fit. Without it, the fit can go on for weeks!\n",
+    "The number of function calls reduces significantly. While the time and function call seem negligible in this fit with only 3 parameters, JIT compilation becomes **essential** in a fit with $O(100)$ parameters typical in an LHC fit. **Without the compiled functions, the fit can go on for weeks!**\n",
     "\n",
     "Take a look at the comparisons study we did for the ATLAS analysis:\n",
     "\n",
@@ -1017,7 +1017,9 @@
     "\n",
     "Things that can be optimized for better convergence:\n",
     "\n",
+    "- Generate more simulated events for better modelling.\n",
     "- Tighter preselections - removing more of the background-rich phase space $p_{ref}\\sim 0$ that can cause numerical instabilites, removing phase space regions with low Monte Carlo statistics or that are difficult to model, etc.\n",
+    "- Add more input features for easier signal-background separation.\n",
     "- Changing the hyperparameters of the various NNs used in the modelling.\n",
     "- Training larger ensembles\n",
     "\n",
