removed html fig

--- a/cms_ttbar_open_data/Parameter_Fitting.ipynb
+++ b/cms_ttbar_open_data/Parameter_Fitting.ipynb
@@ -1107,7 +1107,7 @@
     "\n",
     "A (very tentative) flowchart associated with a typical NSBI analysis:\n",
     "\n",
-    "<img src=\"attachment:2bc78fe6-b27f-4054-a0fc-f4dbef5fba15.png\" alt=\"flowchart_irishep_NSBI.png\" width=\"900\"/>"
+    "![flowchart_irishep_NSBI.png](attachment:2bc78fe6-b27f-4054-a0fc-f4dbef5fba15.png)"
    ]
   },
   {
