no more html figs

--- a/cms_ttbar_open_data/Parameter_Fitting.ipynb
+++ b/cms_ttbar_open_data/Parameter_Fitting.ipynb
@@ -1029,8 +1029,7 @@
     "\n",
     "The workflow necessarily has to be repeated multiple times until unbiased estimators with robust statistical properties are achieved. Following is the kind of workflow built for the ATLAS analysis:\n",
     "\n",
-    "<img src=\"attachment:fa71917f-af82-4c01-868c-4a825b720694.png\" alt=\"ens_NN_optimize.png\" width=\"1200\"/>\n",
-    "\n",
+    "![ens_NN_optimize.png](attachment:fa71917f-af82-4c01-868c-4a825b720694.png)\n",
     "\n"
    ]
   },
