--- a/cms_ttbar_open_data/Data_Preprocessing.ipynb
+++ b/cms_ttbar_open_data/Data_Preprocessing.ipynb
@@ -393,22 +393,15 @@
    },
    "outputs": [],
    "source": [
-    "if USE_SAVED_FEATURES:\n",
-    "    \n",
-    "    features = np.load(f\"{saved_data}features.npy\")\n",
-    "    train_labels = np.load(f\"{saved_data}train_labels.npy\")\n",
-    "    weights = np.load(f\"{saved_data}weights.npy\")\n",
-    "    \n",
-    "else:\n",
+    "# Grab features and labels and convert to np array\n",
+    "features = np.array(output['features'].value)\n",
+    "train_labels = np.array(output['train_labels'].value, dtype='int')\n",
+    "weights = np.array(output['weights'].value)\n",
     "\n",
-    "    # grab features and labels and convert to np array\n",
-    "    features = np.array(output['features'].value)\n",
-    "    train_labels = np.array(output['train_labels'].value, dtype='int')\n",
-    "    weights = np.array(output['weights'].value)\n",
-    "    \n",
-    "    np.save(f\"{saved_data}features.npy\", features)\n",
-    "    np.save(f\"{saved_data}train_labels.npy\", train_labels)        \n",
-    "    np.save(f\"{saved_data}weights.npy\", weights)        "
+    "# Save the numpy arrays for training in the next notebook\n",
+    "np.save(f\"{saved_data}features.npy\", features)\n",
+    "np.save(f\"{saved_data}train_labels.npy\", train_labels)        \n",
+    "np.save(f\"{saved_data}weights.npy\", weights)        "
    ]
   },
   {
