Fixed nsbi cartoon figure

--- a/cms_ttbar_open_data/Data_Preprocessing.ipynb
+++ b/cms_ttbar_open_data/Data_Preprocessing.ipynb
@@ -21,8 +21,7 @@
     "\n",
     "Use well trained Neural Networks as likelihood ratio surrogates to diectly fit parameters of interest - **no need for histograms or Poisson likelihoods.** \n",
     "\n",
-    "<img src=\"attachment:c58a1c61-91d6-4c11-ac54-4a4cd142c6a7.png\" alt=\"nSBI_cartoon.png\" width=\"1200\"/>\n",
-    "\n",
+    "![nSBI_cartoon.png](attachment:c58a1c61-91d6-4c11-ac54-4a4cd142c6a7.png)\n",
     "\n",
     "Workflow with CMS ttbar open data\n",
     "===\n",
